--- a/Frontend/src/app/app.component.sass
+++ b/Frontend/src/app/app.component.sass
@@ -1,14 +1,16 @@
 .navbar
+  position: fixed
+  left: 0
   top: 0
-  height: 3rem
-  text-align: center
+  width: 100%
   background-color: orange
   color: white
+  text-align: center
+  height: 3.5rem
   display: flex
   flex-direction: column
   justify-content: center
   font-size: 2.5rem
-  width: 100%
   z-index: 10
 
 .footer
@@ -19,7 +21,7 @@
   background-color: purple
   color: white
   text-align: center
-  height: 3rem
+  height: 3.5rem
   display: flex
   flex-direction: column
   justify-content: center
