--- a/Frontend/src/styles.sass
+++ b/Frontend/src/styles.sass
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body
+  margin: 0 !important
+  padding: 0 !important
+  top: 0
+app-root
+  display: block
+  height: 100%
+  top: 0 !important
