--- a/Frontend/src/styles.sass
+++ b/Frontend/src/styles.sass
@@ -1,8 +1,13 @@
+*
+  font-family: Blippo, fantasy, sans-serif
+
 body
   margin: 0 !important
   padding: 0 !important
   top: 0
+
 app-root
   display: block
   height: 100%
   top: 0 !important
+
