--- a/Frontend/src/app/components/game/game.component.sass
+++ b/Frontend/src/app/components/game/game.component.sass
@@ -24,7 +24,7 @@ $card-margin-ratio: 0.975
 .new-game
   font-size: calc($base-width/15)
 
-.main
+.hand
   color: white
   margin-bottom: 0
   font-size: calc($base-width/5)
