--- a/Frontend/src/app/components/game/game.component.html
+++ b/Frontend/src/app/components/game/game.component.html
@@ -56,7 +56,7 @@
       class="card card-deck card-player-two"
       [ngClass]="winner === 'Blue' && 'winner'"
     >
-      <p class="main">
+      <p class="hand">
         {{ playerTwo.hand.cards.length }}
       </p>
       <p class="discard">({{ playerTwo.discard.cards.length }})</p>
