--- a/Frontend/src/app/app.component.sass
+++ b/Frontend/src/app/app.component.sass
@@ -6,12 +6,13 @@
   background-color: orange
   color: white
   text-align: center
-  height: 3.5rem
+  height: 3.5vh
   display: flex
   flex-direction: column
   justify-content: center
-  font-size: 2.5rem
+  font-size: 2vh
   z-index: 10
+  overflow: hidden
 
 .footer
   position: fixed
@@ -21,9 +22,10 @@
   background-color: purple
   color: white
   text-align: center
-  height: 3.5rem
+  height: 3.5vh
   display: flex
   flex-direction: column
   justify-content: center
-  font-size: 2.5rem
+  font-size: 2vh
   z-index: 10
+  overflow: hidden
