--- a/Frontend/src/styles.sass
+++ b/Frontend/src/styles.sass
@@ -1,5 +1,5 @@
 *
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif
+  font-family: 'Roboto', sans-serif
 
 body
   margin: 0 !important
